[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/debug_overlay.gd" id="1_1"]

[node name="DebugOverlay" type="Control"]
layout_mode = 1
anchors_preset = 0
offset_left = 20.0
offset_top = 70.0
offset_right = 360.0
offset_bottom = 340.0
script = ExtResource("1_1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBox" type="VBoxContainer" parent="Panel/Margin"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="Title" type="Label" parent="Panel/Margin/VBox"]
layout_mode = 2
text = "Debug Overlay (F1)"

[node name="GiveSpellButton" type="Button" parent="Panel/Margin/VBox"]
layout_mode = 2
text = "Dar carta spell"

[node name="EnemyAttackButton" type="Button" parent="Panel/Margin/VBox"]
layout_mode = 2
text = "Forzar ataque enemigo"

[node name="DefeatButton" type="Button" parent="Panel/Margin/VBox"]
layout_mode = 2
text = "Forzar derrota"

[node name="ReloadButton" type="Button" parent="Panel/Margin/VBox"]
layout_mode = 2
text = "Recargar escena"

[node name="CloseButton" type="Button" parent="Panel/Margin/VBox"]
layout_mode = 2
text = "Cerrar"

[connection signal="pressed" from="Panel/Margin/VBox/GiveSpellButton" to="." method="_on_give_spell_button_pressed"]
[connection signal="pressed" from="Panel/Margin/VBox/EnemyAttackButton" to="." method="_on_enemy_attack_button_pressed"]
[connection signal="pressed" from="Panel/Margin/VBox/DefeatButton" to="." method="_on_defeat_button_pressed"]
[connection signal="pressed" from="Panel/Margin/VBox/ReloadButton" to="." method="_on_reload_button_pressed"]
[connection signal="pressed" from="Panel/Margin/VBox/CloseButton" to="." method="_on_close_button_pressed"]
